Skip to content

Pipewire volume is not consistent with ALSA and PA

I have tried to check, but this does not seem to be reported before. When aout volume is set to 10%, Pipewire volume is reported to be 46%.

The interface (at least Qt) does not have a logarithmic slider. It appears that volume control for Pulseaudio is not linear, so volume control seems to be fine for Pulseaudio. However, with Pipewire the scale is linear...

vlc_aout.h does not seem to specify the scale, which apparently allows the audio output to use whatever it wants. This means that we can not fix this issue by having a logarithmic slider in the interface (which I believe would be the correct fix), because then Pulseaudio would be broken.

I think that the core should always use linear scale, only the control that the user interacts with should apply the scale (similar to the analog logarithmic volume knobs). This also seems to align with Pipewire's mentality.

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information