pipewire: use cubic volume scale as everything else

Fixes #28954.